--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,19 +1,55 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-    <title>로그인 페이지</title>
+  <meta charset="UTF-8">
+  <title>로그인 페이지</title>
+  <link rel="stylesheet" href="/webjars/bootstrap/4.3.1/css/bootstrap.min.css">
+  <link rel="stylesheet" type="text/css" href="/css/login.css">
 </head>
-<body>
-    <h1>로그인</h1>
-    <hr>
+  <body class="my-login-page">
+  <section class="h-100">
+    <div class="container h-100">
+      <div class="row justify-content-md-center h-100">
+        <div class="card-wrapper">
+          <div class="brand">
+            <img src="/img/logo.png">
+          </div>
+          <div class="card fat">
+            <div class="card-body">
+              <h2 class="card-title text-center text-dark">
+                Place Search Service
+              </h2>
+              <form action="/user/login" method="POST">
 
-    <form action="/user/login" method="post">
-        <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
+                <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
 
-        <input type="text" name="username" placeholder="이메일 입력해주세요">
-        <input type="password" name="password" placeholder="비밀번호">
-        <button type="submit">로그인</button>
-    </form>
-</body>
+                <div class="form-group">
+                  <label for="username" class="text-secondary">email</label>
+                  <input id="username" class="form-control" name="username" value="" required autofocus>
+                </div>
+
+                <div class="form-group">
+                  <label for="password" class="text-secondary">Password</label>
+                  <input id="password" type="password" class="form-control" name="password" required>
+                </div>
+
+                <div class="form-group no-margin">
+                  <button type="submit" class="btn btn-info btn-block">
+                    Login
+                  </button>
+                </div>
+              </form>
+            </div>
+          </div>
+          <div class="footer">
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <script src="/webjars/jquery/3.3.1/jquery.min.js"></script>
+  <script src="/webjars/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+  </body>
+
 </html>
