--- a/src/main/resources/templates/placeSearch.html
+++ b/src/main/resources/templates/placeSearch.html
@@ -26,7 +26,7 @@
                                         </div>
                                     </div>
                                     <div class="mt-4 text-center">
-                                        <h4>Search Results For "<span id="query"></span>"</h4></div>
+                                        <h4>Search Results For "<span id="query_result"></span>"</h4></div>
                                 </div>
                             </div>
                         </div>
