--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -17,7 +17,7 @@
           <div class="card fat">
             <div class="card-body">
               <h2 class="card-title text-center text-dark">
-                Place Search Service
+                장소 검색 서비스
               </h2>
               <form action="/user/login" method="POST">
 
@@ -35,7 +35,7 @@
 
                 <div class="form-group no-margin">
                   <button type="submit" class="btn btn-info btn-block">
-                    Login
+                    로그인
                   </button>
                 </div>
               </form>
@@ -48,7 +48,7 @@
     </div>
   </section>
 
-  <script src="/webjars/jquery/3.3.1/jquery.min.js"></script>
+  <script src="/webjars/jquery/3.4.1/jquery.min.js"></script>
   <script src="/webjars/bootstrap/4.3.1/js/bootstrap.min.js"></script>
   </body>
 
