--- a/src/main/resources/templates/loginFail.html
+++ b/src/main/resources/templates/loginFail.html
@@ -17,7 +17,7 @@
                 <div class="card fat">
                     <div class="card-body">
                         <h2 class="card-title text-center text-dark">
-                            Place Search Service
+                            장소 검색 서비스
                         </h2>
                         <form action="/user/login" method="POST">
 
@@ -42,14 +42,15 @@
                     </div>
                 </div>
                 <div class="footer">
-                    로그인 실패
+                    로그인 실패!!
+                    아이디와 비밀번호를 확인하세요.
                 </div>
             </div>
         </div>
     </div>
 </section>
 
-<script src="/webjars/jquery/3.3.1/jquery.min.js"></script>
+<script src="/webjars/jquery/3.4.1/jquery.min.js"></script>
 <script src="/webjars/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 </body>
 
