--- a/src/main/resources/templates/placeSearch.html
+++ b/src/main/resources/templates/placeSearch.html
@@ -85,7 +85,7 @@
     $.ajax(
         {
           type: "GET",
-          url: '/v1/place',
+          url: '/v1/places',
           data: {
             query: $('#query').val(),
             page: $('#page').val(),
