--- a/src/main/resources/static/css/search.css
+++ b/src/main/resources/static/css/search.css
@@ -1,51 +1,90 @@
-body{
-    margin-top:20px;
-    background:#dcdcdc;
+body {
+  margin-top: 20px;
+  background: #dcdcdc;
 }
+
 .card-box {
-    padding: 20px;
-    border-radius: 3px;
-    margin-bottom: 30px;
-    background-color: #fff;
+  padding: 20px;
+  border-radius: 3px;
+  margin-bottom: 30px;
+  background-color: #fff;
 }
+
 .search-result-box .tab-content {
-    padding: 30px 30px 10px 30px;
-    -webkit-box-shadow: none;
-    box-shadow: none;
-    -moz-box-shadow: none
+  padding: 30px 30px 10px 30px;
+  -webkit-box-shadow: none;
+  box-shadow: none;
+  -moz-box-shadow: none
 }
 
 .search-result-box .search-item {
-    padding-bottom: 20px;
-    border-bottom: 1px solid #e3eaef;
-    margin-bottom: 20px
+  padding-bottom: 20px;
+  border-bottom: 1px solid #e3eaef;
+  margin-bottom: 20px
 }
+
 .text-success {
-    color: #0acf97!important;
+  color: #0acf97 !important;
 }
+
 a {
-    color: #007bff;
-    text-decoration: none;
-    background-color: transparent;
+  color: #007bff;
+  text-decoration: none;
+  background-color: transparent;
 }
+
 .btn-custom {
-    background-color: #02c0ce;
-    border-color: #02c0ce;
+  background-color: #02c0ce;
+  border-color: #02c0ce;
 }
 
 .btn-custom, .btn-danger, .btn-info, .btn-inverse, .btn-pink, .btn-primary, .btn-purple, .btn-success, .btn-warning {
-    color: #fff!important;
+  color: #fff !important;
 }
 
 .icon_logout {
-    border: 1px solid #d4d4d4;
-    width: 60px;
-    height: 20px;
-    text-align: center;
-    font-size: 11px;
-    letter-spacing: -.05em;
-    line-height: 20px;
-    color: #515151;
-    background-color: #fff;
-    text-indent: 0;
+  border: 1px solid #d4d4d4;
+  width: 60px;
+  height: 20px;
+  text-align: center;
+  font-size: 11px;
+  letter-spacing: -.05em;
+  line-height: 20px;
+  color: #515151;
+  background-color: #fff;
+  text-indent: 0;
+}
+
+.block {
+  border: 2px solid white;
+  padding: 0px 0px;
+  height: 20px;
+  overflow: hidden;
+  background: #fff;
+  width: 100%;
+  font-family: Gulim;
+  font-size: 12px;
+}
+
+.block ul,
+.block li {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+.block li a {
+  display: block;
+  height: 20px;
+  line-height: 20px;
+  color: #555;
+  text-decoration: none;
+}
+
+.block li span {
+  padding: 2px 5px;
+  background: #02c0ce;
+  color: white;
+  font-weight: bold;
+  margin-right: 3px;
 }
